--- a/index.html
+++ b/index.html
@@ -73,6 +73,32 @@
 
         let bmDataCache = [];
 
+        function getSort(fn) {
+            return function (a, b) {
+                var ret = 0;
+
+                if (fn.call(this, a, b)) {
+                    ret = -1;
+                } else if (fn.call(this, b, a)) {
+                    ret = 1;
+                }
+
+                return ret;
+            }
+        }
+
+        function getMutipSort(arr) {
+            return function (a, b) {
+                var tmp, i = 0;
+
+                do {
+                    tmp = arr[i++](a, b);
+                } while (tmp == 0 && i < arr.length);
+
+                return tmp;
+            }
+        }
+
         new Vue({
             el: "#app",
             data: {
@@ -105,11 +131,17 @@
             },
             mounted() {
                 fetch('/jsondata/Bookmark.json').then(res => res.json()).then(data => {
-                    data = data.sort((a, b) => !!a.top ? -1 : 1);
+                    data = data.sort((a, b) => {
+                        if (!!a.top && !!!b.top) {
+                            return -1;
+                        } else if (!!b.top && !!!a.top) {
+                            return 1;
+                        }
+                        return 0;
+                    });
                     this.bookmarks = data;
                     bmDataCache = data;
                 });
-
                 fetch('/jsondata/BookmarkType.json').then(res => res.json()).then(data => {
                     data = data.sort((a, b) => a.order - b.order)
                     this.bookmarkTypes = data;
