--- a/pages/test.react.html
+++ b/pages/test.react.html
@@ -5,14 +5,21 @@
   <title>React Page</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width" />
-  <script src="cdn/react.production.min.js"></script>
-  <script src="cdn/react-dom.production.min.js"></script>
-  <script src="cdn/react-router-dom.min.js"></script>
-  <script src="cdn/babel.min.js"></script>
+  <link href="cdn/material-design-icons/material-icons.min.css" rel="stylesheet">
+  <style type="text/css">
+    .material-icons.md-18 { font-size: 18px; }
+    .material-icons.md-24 { font-size: 24px; }
+    .material-icons.md-36 { font-size: 36px; }
+    .material-icons.md-48 { font-size: 48px; }
+  </style>
 </head>
 
 <body>
   <div id="root"></div>
+  <script src="cdn/react.production.min.js"></script>
+  <script src="cdn/react-dom.production.min.js"></script>
+  <script src="cdn/react-router-dom.min.js"></script>
+  <script src="cdn/babel.min.js"></script>
   <script type="text/babel" src="src/test/react.js"></script>
 </body>
 
