--- a/pages/index.html
+++ b/pages/index.html
@@ -9,8 +9,7 @@
   <script src="cdn/react-dom.production.min.js"></script>
   <script src="cdn/material-ui.production.min.js"></script>
   <script src="cdn/react-router-dom.min.js"></script>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+  <link href="cdn/material-design-icons/material-icons.min.css" rel="stylesheet">
 </head>
 
 <body>
