--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <script>
-        window.location.href = "/manage/"
+        window.location.href = "/pages/"
     </script>
 </body>
 
