cron auto commit

--- a/pages/index.html
+++ b/pages/index.html
@@ -55,7 +55,7 @@
   </div>
   <script src="cdn/vue.min.js"></script>
   <script>
-    window.pageJsonUrl = "/pagejson";
+    window.pageJsonUrl = "/pageJson";
   </script>
   <script src="lib/index.js"></script>
 </body>
