cron auto commit

--- a/pages/index.html
+++ b/pages/index.html
@@ -36,9 +36,9 @@
       </button>
       <div class="collapse navbar-collapse" id="nav">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" target="_blank" href="/manage/">Manage</a>
-          </li>
+          </li> -->
         </ul>
         <div class="form-inline my-2 my-lg-0">
           <input id="input_search" v-model="serachTxt" type="text" @keyup="serach" class="form-control bm-serach w-20"
