--- a/pages/index.html
+++ b/pages/index.html
@@ -7,7 +7,7 @@
 
   <link rel="stylesheet" href="cdn/bootstrap.min.css" crossorigin="anonymous">
 
-  <title>Bookmark Preview</title>
+  <title>Bookmark</title>
 
   <style type="text/css">
     .cursor-pointer {
@@ -29,7 +29,13 @@
   <div id="app" class="container-fluid pt-3">
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top w-100">
-      <a class="navbar-brand" href="#">Bookmark</a>
+      <a class="navbar-brand" href="#">
+        <svg class="bi bi-bookmarks text-light" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+          <path fill-rule="evenodd" d="M7 13l5 3V4a2 2 0 0 0-2-2H4a2 2 0 0 0-2 2v12l5-3zm-4 1.234l4-2.4 4 2.4V4a1 1 0 0 0-1-1H4a1 1 0 0 0-1 1v10.234z" clip-rule="evenodd"/>
+          <path d="M14 14l-1-.6V2a1 1 0 0 0-1-1H4.268A2 2 0 0 1 6 0h6a2 2 0 0 1 2 2v12z"/>
+        </svg>
+        Chrome Bookmarks
+      </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav" aria-controls="nav"
         aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
