--- a/pages/index.html
+++ b/pages/index.html
@@ -7,7 +7,7 @@
 
   <link rel="stylesheet" href="cdn/bootstrap.min.css" crossorigin="anonymous">
 
-  <title>Bookmark</title>
+  <title>Chrome Bookmark</title>
 
   <style type="text/css">
     .cursor-pointer {
