--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Loading Pages</title>
+    <title>Loading Note</title>
 </head>
 
 <body>
 
     <script>
-        window.location.href = '/pages/'
+        window.location.href = '/note/'
     </script>
 </body>
 
