--- a/pages/markdown.html
+++ b/pages/markdown.html
@@ -27,8 +27,8 @@
 <nav class="navbar navbar-dark bg-dark fixed-top pt-4">
     <div class="align-items-center">
         <a class="navbar-brand" href="#">
-            <ion-icon class="title-icon" size="large" name="logo-markdown"></ion-icon>
-            <span id="title" style="font-size: 32px">Markdown Preview</span>
+            <ion-icon class="title-icon" style="font-size: 26px" name="logo-markdown"></ion-icon>
+            <span id="title" style="font-size: 26px" class="ml-2">正在加载...</span>
         </a>
     </div>
 </nav>
