--- a/pages/markdown.html
+++ b/pages/markdown.html
@@ -10,13 +10,6 @@
             font-size: 16px;
         }
 
-        #md-view {
-            height: calc(100vh - 4.5rem);
-            margin-top: 4.5rem;
-        }
-        .title-icon{
-            vertical-align: sub;
-        }
     </style>
 </head>
 
@@ -24,7 +17,7 @@
 
 <link rel="stylesheet" href="/cdn/editormd/css/editormd.preview.css"/>
 
-<nav class="navbar navbar-dark bg-dark fixed-top pt-4">
+<nav class="navbar navbar-dark bg-dark pt-4">
     <div class="align-items-center">
         <a class="navbar-brand" href="#">
             <ion-icon class="title-icon" style="font-size: 26px" name="logo-markdown"></ion-icon>
