--- a/pages/markdown.html
+++ b/pages/markdown.html
@@ -20,7 +20,7 @@
 <nav class="navbar navbar-dark bg-dark pt-4">
     <div class="align-items-center">
         <a class="navbar-brand" href="#">
-            <ion-icon class="title-icon" style="font-size: 26px" name="logo-markdown"></ion-icon>
+            <ion-icon class="title-icon" style="font-size: 26px;vertical-align: sub;" name="logo-markdown"></ion-icon>
             <span id="title" style="font-size: 26px" class="ml-2">正在加载...</span>
         </a>
     </div>
