--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
 
 </div>
 
-<script src="/cdn/vue/vue.min.js"></script>
+<script src="cdn/vue/vue.min.js"></script>
 <script src="cdn/axios.min.js"></script>
 <link rel="stylesheet" href="/cdn/bootstrap/bootstrap.min.css"/>
-<link href="/cdn/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
+<link href="cdn/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
 <script src="cdn/common.js"></script>
 <script>
 
