--- a/login.html
+++ b/login.html
@@ -12,10 +12,8 @@
 
     <section class="signin">
         <div class="container">
-
-            <div class="sign-content">
-                <h2>sign in</h2>
-
+            <div>
+                <h2 class="text-center mt-2">sign in</h2>
                 <div class="row">
                     <div class="col-sm-12">
                         <div class="signin-form">
@@ -24,15 +22,14 @@
                                     <label for="signin_name">Username</label>
                                     <input v-model="username" type="text" class="form-control" id="signin_name"
                                            placeholder="enter your username">
-                                </div><!--/.form-group -->
+                                </div>
                                 <div class="form-group">
                                     <label for="signin_pwd">Password</label>
                                     <input v-model="password" type="password" class="form-control" id="signin_pwd"
                                            placeholder="Password">
                                 </div>
-                                <div v-show="loginErr" class="alert alert-danger">用户名或密码错误</div>
-                                <button type="submit" class="btn btn-primary" data-toggle="modal"
-                                        data-target=".signin_modal">
+                                <div v-show="loginErr" class="alert alert-danger">用户名或密码错误 [{{loginErrMsg}}]</div>
+                                <button type="submit" class="btn btn-primary">
                                     sign in
                                 </button>
                             </form>
@@ -55,7 +52,7 @@
     new Vue({
         el: "#root",
         data() {
-            return {username: "", password: "", loginErr: false}
+            return {username: "", password: "", loginErr: false, loginErrMsg: ""}
         },
         methods: {
 
@@ -75,8 +72,8 @@
                     common.initFileTree().then(() => {
                         this.navPage();
                     })
-                }).catch(err => {
-                    console.log(err);
+                }).catch((err) => {
+                    this.loginErrMsg = err;
                     this.loginErr = true;
                 });
             },
