--- a/login.html
+++ b/login.html
@@ -5,44 +5,189 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="icon" type="image/jpeg" sizes="80x80" href="imgs/logo.jpg"/>
     <title>Login Page</title>
+    <style type="text/css">
+        .form-bg {
+            background: #00b4ef;
+        }
+
+        .form-horizontal {
+            background: #fff;
+            padding-bottom: 40px;
+            border-radius: 15px;
+            text-align: center;
+        }
+
+        .form-horizontal .heading {
+            display: block;
+            font-size: 35px;
+            font-weight: 700;
+            padding: 35px 0;
+            border-bottom: 1px solid #f0f0f0;
+            margin-bottom: 30px;
+        }
+
+        .form-horizontal .form-group {
+            padding: 0 40px;
+            margin: 0 0 25px 0;
+            position: relative;
+        }
+
+        .form-horizontal .form-control {
+            background: #f0f0f0;
+            border: none;
+            border-radius: 20px;
+            box-shadow: none;
+            padding: 0 20px 0 45px;
+            height: 40px;
+            transition: all 0.3s ease 0s;
+        }
+
+        .form-horizontal .form-control:focus {
+            background: #e0e0e0;
+            box-shadow: none;
+            outline: 0 none;
+        }
+
+        .form-horizontal .form-group i {
+            position: absolute;
+            top: 12px;
+            left: 60px;
+            font-size: 17px;
+            color: #c8c8c8;
+            transition: all 0.5s ease 0s;
+        }
+
+        .form-horizontal .form-control:focus + i {
+            color: #00b4ef;
+        }
+
+        .form-horizontal .fa-question-circle {
+            display: inline-block;
+            position: absolute;
+            top: 12px;
+            right: 60px;
+            font-size: 20px;
+            color: #808080;
+            transition: all 0.5s ease 0s;
+        }
+
+        .form-horizontal .fa-question-circle:hover {
+            color: #000;
+        }
+
+        .form-horizontal .main-checkbox {
+            float: left;
+            width: 20px;
+            height: 20px;
+            background: #11a3fc;
+            border-radius: 50%;
+            position: relative;
+            margin: 5px 0 0 5px;
+            border: 1px solid #11a3fc;
+        }
+
+        .form-horizontal .main-checkbox label {
+            width: 20px;
+            height: 20px;
+            position: absolute;
+            top: 0;
+            left: 0;
+            cursor: pointer;
+        }
+
+        .form-horizontal .main-checkbox label:after {
+            content: "";
+            width: 10px;
+            height: 5px;
+            position: absolute;
+            top: 5px;
+            left: 4px;
+            border: 3px solid #fff;
+            border-top: none;
+            border-right: none;
+            background: transparent;
+            opacity: 0;
+            -webkit-transform: rotate(-45deg);
+            transform: rotate(-45deg);
+        }
+
+        .form-horizontal .main-checkbox input[type=checkbox] {
+            visibility: hidden;
+        }
+
+        .form-horizontal .main-checkbox input[type=checkbox]:checked + label:after {
+            opacity: 1;
+        }
+
+        .form-horizontal .text {
+            float: left;
+            margin-left: 7px;
+            line-height: 20px;
+            padding-top: 5px;
+            text-transform: capitalize;
+        }
+
+        .form-horizontal .btn {
+            float: right;
+            font-size: 14px;
+            color: #fff;
+            background: #00b4ef;
+            border-radius: 30px;
+            padding: 10px 25px;
+            border: none;
+            text-transform: capitalize;
+            transition: all 0.5s ease 0s;
+        }
+
+        @media only screen and (max-width: 479px) {
+            .form-horizontal .form-group {
+                padding: 0 25px;
+            }
+
+            .form-horizontal .form-group i {
+                left: 45px;
+            }
+
+            .form-horizontal .btn {
+                padding: 10px 20px;
+            }
+        }
+    </style>
 </head>
-<body>
+<body class="form-bg">
 
 <div id="root">
 
-    <section class="signin">
-        <div class="container">
-            <div>
-                <h2 class="text-center mt-2">sign in</h2>
-                <div class="row">
-                    <div class="col-sm-12">
-                        <div class="signin-form">
-                            <form @submit.prevent="oauth">
-                                <div class="form-group">
-                                    <label for="signin_name">Username</label>
-                                    <input v-model="username" type="text" class="form-control" id="signin_name"
-                                           placeholder="enter your username">
-                                </div>
-                                <div class="form-group">
-                                    <label for="signin_pwd">Password</label>
-                                    <input v-model="password" type="password" class="form-control" id="signin_pwd"
-                                           placeholder="Password">
-                                </div>
-                                <div v-show="loginErr" class="alert alert-danger">用户名或密码错误 [{{loginErrMsg}}]</div>
-                                <button type="submit" class="btn btn-primary">
-                                    sign in
-                                </button>
-                            </form>
-                        </div>
+    <div class="container">
+        <div class="row justify-content-center mt-5">
+            <div class="col-md-offset-3 col-md-6">
+                <form class="form-horizontal pb-5" @submit.prevent="oauth">
+                    <span class="heading">
+                        <span>Sign in</span>
+                        <i class="fa fa-sign-in mr-2"></i>
+                    </span>
+                    <div class="form-group">
+                        <input type="text" v-model="username" class="form-control" id="inputEmail3"
+                               placeholder="Username">
+                        <i class="fa fa-user"></i>
                     </div>
-                </div>
+                    <div class="form-group help">
+                        <input type="password" v-model="password" class="form-control" id="inputPassword3"
+                               placeholder="Password">
+                        <i class="fa fa-lock"></i>
+                        <a href="#" class="fa fa-question-circle"></a>
+                    </div>
+                    <div class="form-group">
+                        <button type="submit" class="btn btn-outline-primary">登 录</button>
+                    </div>
+                </form>
             </div>
         </div>
-
-    </section>
+    </div>
 
 </div>
 <link rel="stylesheet" href="cdn/bootstrap/bootstrap.min.css"/>
+<link href="cdn/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
 <script src="cdn/vue/vue.min.js"></script>
 <script src="cdn/axios.min.js"></script>
 <script src="cdn/common.js"></script>
