--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="align-items-center">
             <i class="fa fa-2x fa-chrome text-light link mr-2 title-align-sub"></i>
             <a class="navbar-brand" href="#">
-                Chrome Bookmarks
+                Bookmarks
             </a>
         </div>
         <div class="form-inline my-2 my-lg-0">
@@ -45,6 +45,14 @@
     </nav>
 
     <div class="mx-2 mt-3" style="overflow: hidden">
+
+        <div class="alert alert-secondary" role="alert">
+            <span class="font-weight-bold">站内导航：</span>
+            <button @click="window.open(link.url)" v-for="link in innerLinks" type="button" class="btn btn-outline-info p-1 mx-2">
+                {{link.name}}
+            </button>
+        </div>
+
         <input v-model="searchTxt" class="form-control mr-sm-2" type="search" placeholder="搜索书签..." aria-label="Search"
                @keyup.enter="search"/>
         <div class="alert alert-success mt-3" role="alert">
@@ -125,6 +133,10 @@
                 checkedTag: "",
                 searchTxt: "",
                 loading: false,
+                innerLinks: [
+                    {name: "CDN", url: "/cdn"},
+                    {name: "JsonView", url: "/pages/jsonView.html"},
+                ]
             }
         },
         watch: {
