--- a/index.html
+++ b/index.html
@@ -17,18 +17,12 @@
         .title-align-sub {
             vertical-align: sub;
         }
-
-        @media only screen and (max-width: 400px) {
-            .yh-nav {
-                padding-top: 2rem !important;
-            }
-        }
     </style>
 </head>
 <body>
 
 <div id="root" class="container-fluid overflow-hidden" style="padding: 0">
-    <nav class="navbar navbar-dark bg-dark yh-nav">
+    <nav class="navbar navbar-dark bg-dark">
         <div class="align-items-center">
             <i class="fa fa-2x fa-chrome text-light link mr-2 title-align-sub"></i>
             <a class="navbar-brand" href="#">
