登录问题解决

--- a/login.html
+++ b/login.html
@@ -161,7 +161,7 @@
     <div class="container">
         <div class="row justify-content-center mt-5">
             <div class="col-md-offset-3 col-md-6">
-                <form class="form-horizontal pb-5" @submit.prevent="oauth">
+                <form @submit.prevent="oauth" class="form-horizontal pb-5">
                     <span class="heading">
                         <span>Sign in</span>
                         <i class="fa fa-sign-in mr-2"></i>
@@ -175,8 +175,8 @@
                         <input type="password" v-model="password" class="form-control" id="inputPassword3"
                                placeholder="Password">
                         <i class="fa fa-lock"></i>
-                        <a href="#" class="fa fa-question-circle"></a>
                     </div>
+                    <div v-show="loginErr" class="alert alert-danger m-2">用户名或密码错误</div>
                     <div class="form-group">
                         <button type="submit" class="btn btn-outline-primary">登 录</button>
                     </div>
@@ -203,8 +203,9 @@
 
             oauth() {
                 if (this.username.trim() === "" || this.password.trim() === "") {
-                    return;
+                    return false;
                 }
+
                 axios.post('https://gitee.com/oauth/token', {
                     grant_type: "password",
                     username: this.username,
@@ -219,6 +220,8 @@
                     this.loginErrMsg = err;
                     this.loginErr = true;
                 });
+
+                return false;
             },
 
             loginValid() {
