--- a/editor.html
+++ b/editor.html
@@ -24,7 +24,7 @@
         </div>
 
         <div class="row">
-            <div id="test-editor">
+            <div id="test-editor" style="margin-bottom: 5rem">
                 <textarea style="display:none;"></textarea>
             </div>
         </div>
@@ -108,6 +108,7 @@
         mounted() {
             this.initFileList();
             this.editor = editormd("test-editor", {
+                mode:"gfm",
                 width: "98%",
                 autoHeight: true,
                 path: "cdn/editormd/lib/",
