--- a/editor.html
+++ b/editor.html
@@ -9,6 +9,29 @@
 <body>
 
 <div id="root">
+
+    <nav class="navbar navbar-dark bg-dark">
+        <div class="align-items-center">
+            <a class="navbar-brand" href="#">
+                EditorMd
+            </a>
+        </div>
+        <div class="form-inline">
+            <div class="btn-group dropleft">
+                <button type="button" class="btn btn-outline-light dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
+                        aria-expanded="false">
+                    文件操作
+                </button>
+                <div class="dropdown-menu">
+                    <a class="dropdown-item" href="#" @click.prevent="update">更新文件</a>
+                    <a class="dropdown-item" href="#" @click.prevent="syncFile">同步文件</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#" @click.prevent="syncFileTree">初始化文件树</a>
+                </div>
+            </div>
+        </div>
+    </nav>
+
     <div class="m-3">
 
         <div class="row ml-1">
@@ -29,13 +52,11 @@
             </div>
         </div>
 
-        <div class="alert alert-secondary font-weight-bold d-flex justify-content-between fixed-bottom m-2 p-2"
-             role="alert">
+        <div class="alert alert-secondary d-flex justify-content-between align-items-center fixed-bottom m-2 p-2"role="alert">
             <div>
-                <button type="button" class="btn btn-sm btn-outline-primary ml-2" @click="update">Update</button>
-                <button type="button" class="btn btn-sm btn-outline-primary ml-2" @click="syncFile">Sync</button>
+                <span class="text-info">😀 Ctrl+S 保存文件喔~~</span>
             </div>
-            <div class="mt-1">
+            <div>
                 <span v-if="selectedFile === ''" class="text-danger">未选择文件</span>
                 <span v-else>
                     <span class="mx-1 text-success">已选择文件</span>
@@ -50,6 +71,7 @@
 <script src="cdn/vue/vue.min.js"></script>
 <script src="cdn/axios.min.js"></script>
 <script src="cdn/bootstrap/jquery.slim.min.js"></script>
+<script src="cdn/bootstrap/bootstrap.min.js"></script>
 <script src="cdn/editormd/editormd.min.js"></script>
 <script src="cdn/common.js"></script>
 <link rel="stylesheet" href="cdn/editormd/css/editormd.css"/>
@@ -62,7 +84,7 @@
         el: "#root",
         data() {
             return {
-                selectedFile: "json/test.json",
+                selectedFile: "test/test.json",
                 fileList: [],
                 editor: null
             }
@@ -96,6 +118,13 @@
                 }
                 this.loadFile(true);
             },
+            syncFileTree() {
+                confirm("确认同步文件树？") && common.initFileTree().then(() => {
+                    tip("同步文件树完成！");
+                    this.fileList = [];
+                    this.initFileList();
+                });
+            },
             listenEvent() {
                 $(window).keydown(function (event) {
                     if (event.keyCode === 83 && event.ctrlKey) {
@@ -108,7 +137,7 @@
         mounted() {
             this.initFileList();
             this.editor = editormd("test-editor", {
-                mode:"gfm",
+                mode: "gfm",
                 width: "98%",
                 autoHeight: true,
                 path: "cdn/editormd/lib/",
