--- a/nav.html
+++ b/nav.html
@@ -130,7 +130,8 @@
                 loading: false,
                 innerLinks: [
                     {name: "CDN", url: "/cdn"},
-                    {name: "EditorMd", url: "/editor.html"},
+                    {name: "Monaco Editor", url: "/pages/fileEditor.html"},
+                    {name: "Markdown Editor", url: "/pages/mdEditor.html"},
                     {name: "JsonView", url: "/pages/jsonView.html"},
                 ]
             }
