--- a/pages/mdEditor.html
+++ b/pages/mdEditor.html
@@ -9,7 +9,7 @@
 
 <div id="root">
 
-    <yanhui-header title="Markdown编辑器"></yanhui-header>
+    <yanhui-header title="Markdown编辑器" icon="file-code-o"></yanhui-header>
 
     <div class="m-3">
 
