--- a/cdn/index.html
+++ b/cdn/index.html
@@ -16,18 +16,7 @@
 
 <div id="app">
 
-    <nav class="navbar navbar-dark bg-dark">
-        <div class="align-items-center">
-            <a class="navbar-brand" href="#">
-                CDN Index
-            </a>
-        </div>
-        <div class="form-inline my-2 my-lg-0">
-            <button @click="refresh" type="button" class="btn btn-link">
-                <i class="fa fa-2x fa-refresh text-light link mr-2"></i>
-            </button>
-        </div>
-    </nav>
+    <yanhui-header title="CDN Index"></yanhui-header>
 
     <div class="p-3 d-md-flex justify-content-around flex-wrap yh-content">
 
@@ -73,48 +62,48 @@
     </div>
 
 </div>
-
-<script src="vue/vue.min.js"></script>
-<script src="axios.min.js"></script>
 <script src="common.js"></script>
-<link href="font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
-<link href="bootswatch/bootstrap.sketchy.min.css" rel="stylesheet">
 <script>
 
-    new Vue({
-        el: "#app",
-        data() {
-            return {
-                cfg: {},
-                fileTree: ""
-            }
-        },
-        methods: {
-            refresh() {
-                let result = confirm("确认重新加载？");
-                if (result) {
-                    this.cfg = {};
-                    this.fileTree = "";
-                    this.loadCfg(true);
-                    this.loadFileTree(true);
+    initApp({
+        baseLibs: [],
+        asyncLibs: [],
+    }).then(() => {
+        new Vue({
+            el: "#app",
+            data() {
+                return {
+                    cfg: {},
+                    fileTree: ""
                 }
             },
-            loadCfg(refresh = false) {
-                common.getContent("json/cdn.cfg.json", refresh).then(cfgJson => {
-                    console.log(cfgJson);
-                    this.cfg = JSON.parse(cfgJson);
-                });
+            methods: {
+                refresh() {
+                    let result = confirm("确认重新加载？");
+                    if (result) {
+                        this.cfg = {};
+                        this.fileTree = "";
+                        this.loadCfg(true);
+                        this.loadFileTree(true);
+                    }
+                },
+                loadCfg(refresh = false) {
+                    common.getContent("json/cdn.cfg.json", refresh).then(cfgJson => {
+                        console.log(cfgJson);
+                        this.cfg = JSON.parse(cfgJson);
+                    });
+                },
+                loadFileTree(refresh = false) {
+                    common.getContent("json/cdn.fileTree.txt", refresh).then(data => {
+                        this.fileTree = data;
+                    });
+                },
             },
-            loadFileTree(refresh = false) {
-                common.getContent("json/cdn.fileTree.txt", refresh).then(data => {
-                    this.fileTree = data;
-                });
-            },
-        },
-        mounted() {
-            this.loadCfg();
-            this.loadFileTree();
-        }
+            mounted() {
+                this.loadCfg();
+                this.loadFileTree();
+            }
+        })
     })
 
 </script>
