--- a/nav.html
+++ b/nav.html
@@ -23,7 +23,7 @@
 
 <div id="root" class="container-fluid overflow-hidden" style="padding: 0">
 
-    <yanhui-header title="Bookmarks" icon="chrome"></yanhui-header>
+    <yanhui-header title="Bookmarks" icon="chrome" :operations="operations"></yanhui-header>
     <!--<nav class="navbar navbar-dark bg-dark">
         <div class="align-items-center">
             <i class="fa fa-2x fa-chrome text-light link mr-2 title-align-sub"></i>
@@ -119,7 +119,14 @@
                     checkedType: "",
                     checkedTag: "",
                     searchTxt: "",
-                    loading: false
+                    loading: false,
+                    operations: [
+                        {
+                            title: "下载书签", call: () => {
+                                this.refreshData();
+                            }
+                        }
+                    ]
                 }
             },
             watch: {
