--- a/login.html
+++ b/login.html
@@ -186,7 +186,11 @@
     </div>
 
 </div>
-<script src="cdn/common.js"></script>
+<link rel="stylesheet" href="cdn/bootstrap/bootstrap.min.css"/>
+<link href="cdn/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
+<script src="cdn/vue/vue.min.js"></script>
+<script src="cdn/axios.min.js"></script>
+<script src="/cdn/common.js"></script>
 <script>
     initApp().then(() => {
         const storage_login = "login-state";
